# SISE_OPSISE

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.ipynb
app/streamlit/: Dockerfile  README.md  app.py  app2.py  app_sentinel.py  config.py  docker-compose.yml  llm_analyst.py  requirements.txt  utils.py
app/streamlit/components/: ui.py
data/: FW.sql
docs/: rapport_firewall.qmd
exploration/: exploration.ipynb  exploration_brute.ipynb  ml_classification.ipynb  pyproject.toml
src/: .dockerignore  .env.example  Dockerfile  app.py  app_config.py  config.py  docker-compose.yml  requirements.txt  sentinel_llm_analyst.py  sentinel_utils.py
src/components/: data_source_selector.py  sentinel_theme.py  top_nav.py  ui.py
src/data/: fusion.csv
src/modules/: __init__.py  charts.py  filters.py  preprocessing.py  stats.py
src/modules/components/: filters.py
src/pages/: 1_Analyse_Descriptive.py  1_Visualisation.py  2_Carte.py  2_DataTable.py  3_Sentinel_Avance.py  3_Visualisation_IP.py  4_Statistiques.py  5_Carte.py  6_Sentinel_Avance.py
src/utils/: __init__.py
