[project]
name = "exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Data
    "numpy<2",
    "pandas>=2.2,<3",
    "pyarrow>=15.0.0",
    "duckdb>=0.10.0,<=1.4.4",
    # App
    "streamlit>=1.55.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    # Visualisation
    "plotly>=5.18.0",
    "pydeck>=0.8.0",
    "matplotlib>=3.8,<4",
    "seaborn>=0.13,<1",
    # ML
    "scikit-learn>=1.4,<2",
    "scipy>=1.12.0",
    # Dev / notebooks
    "asttokens>=3.0.1",
    "ipykernel>=7.2.0",
]
