[project]
name = "exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asttokens>=3.0.1",
    "ipaddress>=1.0.23",
    "ipykernel>=7.2.0",
    "numpy<2",
    "pandas>=2.2,<3",
    "pyarrow>=15.0.0",

    # Visualisation
    "matplotlib>=3.8,<4",
    "seaborn>=0.13,<1",
    
    "scikit-learn>=1.4,<2",
]